# raka

./: .gitignore  Directory.Build.props  LICENSE  README.md  Raka.slnx  appxmanifest.xml  build.ps1  nuget.config
.github/: copilot-instructions.md
.github/instructions/: raka.instructions.md
.github/plugin/: plugin.json
.github/workflows/: release.yml
instructions/: raka.instructions.md
msix/: README.md  install.cmd  install.ps1
samples/: test-hotreload.xaml
samples/SampleApp/: App.xaml.cs  HomePage.xaml  HomePage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  SampleApp.csproj  SettingsPage.xaml  SettingsPage.xaml.cs  StatusCard.xaml  StatusCard.xaml.cs  ToolsPage.xaml  ToolsPage.xaml.cs
samples/SampleApp/Properties/: launchSettings.json
samples/TestApp/: App.xaml  App.xaml.cs  InputTestPage.xaml  InputTestPage.xaml.cs  ListTestPage.xaml  ListTestPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  TestApp.csproj  VisualStatesPage.xaml  VisualStatesPage.xaml.cs
src/Raka.Cli/: CliJsonContext.cs  Program.cs  Raka.Cli.csproj
src/Raka.Cli/Commands/: AddXamlCommand.cs  AncestorsCommand.cs  BatchCommand.cs  ClickCommand.cs  CommandHelpers.cs  ConnectCommand.cs  DisconnectCommand.cs  FocusCommand.cs  GetPropertyCommand.cs  GetStatesCommand.cs  HotReloadCommand.cs  HotkeyCommand.cs  InspectCommand.cs  InvokeCommand.cs  ListCommand.cs  ListPagesCommand.cs  (+14 more)
src/Raka.DevTools/: Raka.DevTools.csproj  RakaDevToolsExtension.cs
src/Raka.Protocol/: Messages.cs
src/Raka.Tap/: CMakeLists.txt  raka_tap.cpp  raka_tap.def
(+12 files in other folders)
